@@ -126,7 +126,7 @@ Course 2022, day 2: Vectorial picking with PySeg on Mice Intact P19 cells (emd_1
         "sigmaS": 0.5,
         "sigmaP": 0.0,
         "keepAllFiles": true,
-        "inTomograms": "142.outputTomograms"
+        "inTomograms": "142.tomograms"
     },
     {
         "object.className": "ProtPySegPreSegParticles",
@@ -378,26 +378,6 @@ Course 2022, day 2: Vectorial picking with PySeg on Mice Intact P19 cells (emd_1
         "doInvert": false,
         "doSmooth": true,
         "sigmaConvolution": 2.0
-    },
-    {
-        "object.className": "ProtPySegGraphs",
-        "object.id": "1623",
-        "object.label": "pyseg - graphs (copy)",
-        "object.comment": "",
-        "_useQueue": false,
-        "_prerequisites": "",
-        "_queueParams": null,
-        "runName": null,
-        "runMode": 0,
-        "vesiclePkgSize": 3,
-        "keepOnlyReqFiles": true,
-        "sSig": 3.0,
-        "vDen": 0.0035,
-        "vRatio": 4.0,
-        "maxLen": 330.0,
-        "hostName": "localhost",
-        "numberOfThreads": 3,
-        "inSegProt": "687."
     }
 ]
 
