@@ -4,10 +4,14 @@ v3.1.6:
   - HIV-HTA template: removes coords extraction and reconstruction since mapback can be done without them
   - Import Tilt series or Import tilt series movies do not work in streaming anymore
   - Import tomograms outputs "Tomograms" and defines possible outputs. Templates and tests adapted
+  - Pyseg workflow template fixed (extra graphs removed)
+  - HIV Reconstruction workflow template fixed (tomograms origin taken from mrc)
   Developers:
     - __init__ uses logger now
     - test_transformation fixed
     - SetOfCoordinates refactored internally to deal better with tomograms.
+    - SetOfSubtomograms.iterCoordinates --> Mimics SetOfCoordinates behavior
+
 v3.1.5:
  developers: hot fix, invalid import in test centralized layer
 v3.1.4:
